--- a/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
+++ b/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
@@ -163,6 +163,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\MiniEngine\Animation.cpp" />
+    <ClCompile Include="..\..\MiniEngine\AnimationClip.cpp" />
+    <ClCompile Include="..\..\MiniEngine\AnimationPlayController.cpp" />
     <ClCompile Include="..\..\MiniEngine\Camera.cpp" />
     <ClCompile Include="..\..\MiniEngine\ConstantBuffer.cpp" />
     <ClCompile Include="..\..\MiniEngine\DescriptorHeap.cpp" />
@@ -198,6 +201,7 @@
     <ClCompile Include="..\..\MiniEngine\tkFile\TkmFile.cpp" />
     <ClCompile Include="..\..\MiniEngine\tkFile\TksFile.cpp" />
     <ClCompile Include="..\..\MiniEngine\VertexBuffer.cpp" />
+    <ClCompile Include="Physics\BoxCollider.cpp" />
     <ClCompile Include="Physics\CapsuleCollider.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
@@ -220,6 +224,9 @@
     <ClCompile Include="Title.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\MiniEngine\Animation.h" />
+    <ClInclude Include="..\..\MiniEngine\AnimationClip.h" />
+    <ClInclude Include="..\..\MiniEngine\AnimationPlayController.h" />
     <ClInclude Include="..\..\MiniEngine\Camera.h" />
     <ClInclude Include="..\..\MiniEngine\ConstantBuffer.h" />
     <ClInclude Include="..\..\MiniEngine\DescriptorHeap.h" />
@@ -261,6 +268,7 @@
     <ClInclude Include="..\..\MiniEngine\tkFile\TksFile.h" />
     <ClInclude Include="..\..\MiniEngine\util\Stopwatch.h" />
     <ClInclude Include="..\..\MiniEngine\VertexBuffer.h" />
+    <ClInclude Include="Physics\BoxCollider.h" />
     <ClInclude Include="Physics\CapsuleCollider.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
