--- a/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
+++ b/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
@@ -201,6 +201,7 @@
     <ClCompile Include="..\..\MiniEngine\tkFile\TkmFile.cpp" />
     <ClCompile Include="..\..\MiniEngine\tkFile\TksFile.cpp" />
     <ClCompile Include="..\..\MiniEngine\VertexBuffer.cpp" />
+    <ClCompile Include="BossEnBase.cpp" />
     <ClCompile Include="MobEnBase.cpp" />
     <ClCompile Include="Physics\BoxCollider.cpp" />
     <ClCompile Include="Physics\CapsuleCollider.cpp" />
@@ -269,6 +270,7 @@
     <ClInclude Include="..\..\MiniEngine\tkFile\TksFile.h" />
     <ClInclude Include="..\..\MiniEngine\util\Stopwatch.h" />
     <ClInclude Include="..\..\MiniEngine\VertexBuffer.h" />
+    <ClInclude Include="BossEnBase.h" />
     <ClInclude Include="MobEnBase.h" />
     <ClInclude Include="Physics\BoxCollider.h" />
     <ClInclude Include="Physics\CapsuleCollider.h" />
