--- a/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj.filters
+++ b/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj.filters
@@ -62,6 +62,9 @@
     <Filter Include="Engine\Physics\Character">
       <UniqueIdentifier>{af78dd35-23b6-42ea-bb4d-e2542a9a219a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\UI">
+      <UniqueIdentifier>{a3109487-7ae6-4bd4-9e23-58a3263361c6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -236,7 +239,7 @@
       <Filter>Engine\Physics\Character</Filter>
     </ClCompile>
     <ClCompile Include="PlayerStatusUI.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース ファイル\Game\UI</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -438,6 +441,8 @@
     <ClInclude Include="Physics\Character\CharacterController.h">
       <Filter>Engine\Physics\Character</Filter>
     </ClInclude>
-    <ClInclude Include="PlayerStatusUI.h" />
+    <ClInclude Include="PlayerStatusUI.h">
+      <Filter>ソース ファイル\Game\UI</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
