backgroundクラス追加、フォルダ整理

--- a/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
+++ b/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
@@ -201,6 +201,7 @@
     <ClCompile Include="..\..\MiniEngine\tkFile\TkmFile.cpp" />
     <ClCompile Include="..\..\MiniEngine\tkFile\TksFile.cpp" />
     <ClCompile Include="..\..\MiniEngine\VertexBuffer.cpp" />
+    <ClCompile Include="BackGround.cpp" />
     <ClCompile Include="BossEnBase.cpp" />
     <ClCompile Include="GameCamera.cpp" />
     <ClCompile Include="Physics\Character\CharacterController.cpp" />
@@ -273,6 +274,7 @@
     <ClInclude Include="..\..\MiniEngine\tkFile\TksFile.h" />
     <ClInclude Include="..\..\MiniEngine\util\Stopwatch.h" />
     <ClInclude Include="..\..\MiniEngine\VertexBuffer.h" />
+    <ClInclude Include="BackGround.h" />
     <ClInclude Include="BossEnBase.h" />
     <ClInclude Include="GameCamera.h" />
     <ClInclude Include="Physics\Character\CharacterController.h" />
@@ -295,7 +297,6 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="system\system.h" />
     <ClInclude Include="Title.h" />
-    <ClInclude Include="TrianglePolygon.h" />
     <ClInclude Include="Util.h" />
   </ItemGroup>
   <ItemGroup>
