--- a/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj.filters
+++ b/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj.filters
@@ -268,6 +268,9 @@
     <ClCompile Include="PostEffect.cpp">
       <Filter>Engine\Graphics\PostEffect</Filter>
     </ClCompile>
+    <ClCompile Include="GroupCoreGenerator.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\MiniEngine\GraphicsEngine.h">
@@ -486,5 +489,6 @@
     <ClInclude Include="Primitive.h">
       <Filter>Engine\Graphics\PostEffect</Filter>
     </ClInclude>
+    <ClInclude Include="GroupCoreGenerator.h" />
   </ItemGroup>
 </Project>
