メニュー画面追加

--- a/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
+++ b/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
@@ -208,6 +208,7 @@
     <ClCompile Include="EnTest.cpp" />
     <ClCompile Include="GameCamera.cpp" />
     <ClCompile Include="GroupCoreGenerator.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Physics\Character\CharacterController.cpp" />
     <ClCompile Include="MobEnBase.cpp" />
     <ClCompile Include="Physics\BoxCollider.cpp" />
@@ -288,6 +289,7 @@
     <ClInclude Include="EnTest.h" />
     <ClInclude Include="GameCamera.h" />
     <ClInclude Include="GroupCoreGenerator.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Physics\Character\CharacterController.h" />
     <ClInclude Include="MobEnBase.h" />
     <ClInclude Include="Physics\BoxCollider.h" />
