--- a/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj.filters
+++ b/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj.filters
@@ -148,9 +148,6 @@
     <ClCompile Include="..\..\MiniEngine\GPUBuffer.cpp">
       <Filter>Engine</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\MiniEngine\GraphicsEngine.cpp">
-      <Filter>Engine</Filter>
-    </ClCompile>
     <ClCompile Include="GroupCoreGenerator.cpp">
       <Filter>Engine</Filter>
     </ClCompile>
@@ -203,6 +200,9 @@
       <Filter>ソースファイル\Game\Charactor</Filter>
     </ClCompile>
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="..\..\MiniEngine\GraphicsEngine.cpp">
+      <Filter>Engine\Graphics</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="system\system.h">
@@ -367,9 +367,6 @@
     <ClInclude Include="..\..\MiniEngine\GPUBuffer.h">
       <Filter>Engine</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\MiniEngine\GraphicsEngine.h">
-      <Filter>Engine</Filter>
-    </ClInclude>
     <ClInclude Include="GroupCoreGenerator.h">
       <Filter>Engine</Filter>
     </ClInclude>
@@ -434,6 +431,9 @@
       <Filter>ソースファイル\Game\Charactor</Filter>
     </ClInclude>
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="..\..\MiniEngine\GraphicsEngine.h">
+      <Filter>Engine\Graphics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
