--- a/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj.filters
+++ b/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj.filters
@@ -206,6 +206,9 @@
     <ClCompile Include="Random.cpp">
       <Filter>ソースファイル\Game\Charactor</Filter>
     </ClCompile>
+    <ClCompile Include="DrBoar.cpp">
+      <Filter>ソースファイル\Game\Charactor\Enemy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="system\system.h">
@@ -440,6 +443,9 @@
     <ClInclude Include="Random.h">
       <Filter>ソースファイル\Game\Charactor</Filter>
     </ClInclude>
+    <ClInclude Include="DrBoar.h">
+      <Filter>ソースファイル\Game\Charactor\Enemy</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
@@ -519,6 +525,9 @@
     </Filter>
     <Filter Include="Engine\Physics\Character">
       <UniqueIdentifier>{b603d868-cf45-4be1-ab13-490d69c7e9f0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソースファイル\Game\Charactor\Enemy">
+      <UniqueIdentifier>{76806261-67c7-4a92-86f4-1e258fc89bfb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
