--- a/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
+++ b/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
@@ -209,6 +209,7 @@
     <ClCompile Include="EnemyAnimation.cpp" />
     <ClCompile Include="EnTest.cpp" />
     <ClCompile Include="GameCamera.cpp" />
+    <ClCompile Include="Physics\GhostObject.cpp" />
     <ClCompile Include="GroupCoreGenerator.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Physics\Character\CharacterController.cpp" />
@@ -293,6 +294,7 @@
     <ClInclude Include="EnemyAnimation.h" />
     <ClInclude Include="EnTest.h" />
     <ClInclude Include="GameCamera.h" />
+    <ClInclude Include="Physics\GhostObject.h" />
     <ClInclude Include="GroupCoreGenerator.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Physics\Character\CharacterController.h" />
