--- a/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
+++ b/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
@@ -205,6 +205,7 @@
     <ClCompile Include="BossEnBase.cpp" />
     <ClCompile Include="DrBoar.cpp" />
     <ClCompile Include="EnArmyGenerator.cpp" />
+    <ClCompile Include="EnBase.cpp" />
     <ClCompile Include="EnBehaviorTest.cpp" />
     <ClCompile Include="EnemyAnimation.cpp" />
     <ClCompile Include="EnTest.cpp" />
@@ -290,6 +291,7 @@
     <ClInclude Include="BossEnBase.h" />
     <ClInclude Include="DrBoar.h" />
     <ClInclude Include="EnArmyGenerator.h" />
+    <ClInclude Include="EnBase.h" />
     <ClInclude Include="EnBehaviorTest.h" />
     <ClInclude Include="EnemyAnimation.h" />
     <ClInclude Include="EnTest.h" />
