--- a/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj.filters
+++ b/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj.filters
@@ -221,6 +221,9 @@
       <Filter>ソースファイル\Game\Charactor\Enemy</Filter>
     </ClCompile>
     <ClCompile Include="Stage1.cpp" />
+    <ClCompile Include="BossBoar.cpp">
+      <Filter>ソースファイル\Game\Charactor\Enemy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="system\system.h">
@@ -470,6 +473,9 @@
       <Filter>ソースファイル\Game\Charactor\Enemy</Filter>
     </ClInclude>
     <ClInclude Include="Stage1.h" />
+    <ClInclude Include="BossBoar.h">
+      <Filter>ソースファイル\Game\Charactor\Enemy</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ソースファイル">
